# wms

./: .clang-format  CMakeLists.txt  main.cpp  readme.md
cmake/: build.cmake  deployment.cmake  ide.cmake  install.cmake  standard.cmake  utils.cmake
doc/: readme.md
module/: CMakeLists.txt
module/box/: CMakeLists.txt
module/box/include/: box.hxx
module/box/src/: box.cxx
module/shelf/: CMakeLists.txt
module/shelf/include/: shelf.hxx
module/shelf/src/: shelf.cxx
sample/: readme.md
